# assetio

./: Cargo.toml  README.md
src/: lib.rs
testing/: test0.txt  test1.txt  test2.txt
