[package]
name = "assetio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "0.7"
byteorder = "1"
tempfile = "3"

# TODO: This should be removed when the packer is moved outside the crate
walkdir = "2"
clap = { version = "3", features = ["derive"] }